--- a/Backend/views/pdf/certificate.ejs
+++ b/Backend/views/pdf/certificate.ejs
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans:ital,wght@1,300&family=Roboto+Condensed:ital@1&display=swap');
-    </style>
+   
     <style type='text/css'>
         body {
+            font-family: 'Roboto Condensed', sans-serif;
             color: black;
             display: table;
             font-family: 'Oswald', sans-serif;
             font-size: 14px;
             text-align: center;
+            width: 100%;
         }
 
         p {
@@ -84,25 +84,23 @@
             </span>
         </footer>
 
-        <hr style="width: 100%; border: 10px solid #EF6231;">
-        </hr>
-
+        <hr style="width: calc(100% - 20px); border: 10px solid #EF6231;"></hr>
         <table class="table-suply" width="100%" cellspacing="0" cellpadding="0" style="border:none; line-height: 0.5rem;">
             <tr>
                 <td width="70%">
                     <table>
                         <tr style="width: 60%" class="text-left">
                             <td width="50%">
-                                <img src="<%= BACKEND_URL + '/backend/images/logo/' + general.logo %>" width="210" height="100">
+                                <img src="<%= data.BACKEND_URL %>/gs1Images/backend/logo/logo.png" width="210" height="100">
+
                             </td>
                             <td width="50%">
                                 <p style="margin-bottom:0; text-align: left;">The Global Language of Business</p>
-                                <p style="margin : 0; padding-top:0; text-align: left; font-size: bold; font-size: 16px; color: #F26334;">
+                                <p style="margin: 0; padding-top:0; text-align: left; font-size: bold; font-size: 16px; color: #F26334;">
                                     <strong>GS<span>1</span> COMPANY PREFIX CERTIFICATE</strong>
                                 </p>
                             </td>
                         </tr>
-
                         <tr>
                             <td>
                                 <p style="margin-bottom:0;">Licensed To</p>
@@ -111,42 +109,93 @@
                         <tr>
                             <td>
                                 <p style="margin-bottom:0; padding-top:0; padding-bottom: 0; font-size: 20px; color: #F26334;">
-                                    <span><%= memberData.company_name_eng %></span>
+                                    <span><%= data.user.company_name_eng %></span>
                                 </p>
                             </td>
                         </tr>
-
-                        <!-- ... more rows ... -->
-
                         <tr>
                             <td>
-                                <p style="margin-bottom:0; padding-top:0;"><strong>GS<span>1</span> GLN Identification:
-                                        <span style="color: #F26334;"><%= memberData.gln %></span></strong></p>
-                            </td>
-                            <td class="text-center">
-                                <img src="<%= BACKEND_URL + '/upload/stamp1.png' %>" width="120" height="100" style="transform: rotate(330deg);">
+                                <p style="margin-bottom:0; padding-top:0;">LICENSEE</p>
                             </td>
                         </tr>
-
-                        <!-- ... more rows ... -->
-
+                        <tr>
+                            <td>
+                                <p style="margin-bottom:0; padding-top:0;"><strong>GS<span>1</span> COMPANY PREFIX: <span style="color: #F26334;"><%= data.userData.gcpGLNID %></span></strong></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="padding-top:0;">For use in creating GS1 Identification Numbers</p>
+                            </td>
+                        </tr>
+                        <% let p1_explode = data.general.gcp_certificate_detail1 %>
+                        <% let p2_explode = data.general.gcp_certificate_detail2 %>
+                        <tr>
+                            <td>
+                                <p>
+                                    <% p1_explode.forEach(function(p1) { %>
+                                        <%= p1 %><br>
+                                    <% }); %>
+                                </p>
+                            </td>
+                            <td>
+                                <p>
+                                    <% p2_explode.forEach(function(p2) { %>
+                                        <%= p2 %><br>
+                                    <% }); %>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="margin-bottom:0; padding-top:0;"><strong>GS<span>1</span> GLN Identification: <span style="color: #F26334;"><%= data.userData.gln %></span></strong></p>
+                            </td>
+                            <td class="text-center">
+                                <img src="<%= data.BACKEND_URL %>/gs1Images/stamp.png" width="120" height="100" style="transform: rotate(330deg);">
+                            </td>
+                        </tr>
+                        <% 
+                            let _2DVal = data.userData.gcpGLNID + data.expiryDate + Date.now();
+                            let _2DBarCode = 'GCP=' + data.userData.gcpGLNID + ',EXP=' + data.expiryDate + ',HASH=' + _2DVal; // You'll need to generate the QR code in your Node.js backend
+                        %>
+                        <tr>
+                            <td>
+                                <p style="margin-bottom:0; padding-top:0;"><strong>Legal Entity GPC: </strong></p>
+                                <p><strong><span style="color: #F26334;">
+                                    <% data.explodeGPCCode.forEach(function(code, index) { %>
+                                        <span><%= code %></span><% if(index !== data.explodeGPCCode.length - 1) { %>,<% } %>
+                                    <% }); %>
+                                    </span></strong></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p style="margin-bottom:0; padding-top:0;"><%= data.general.gcp_legal_detail %></p>
+                            </td>
+                            <td width="10%" class="text-left" style="border-right-style: 1px solid; border-color: #ED7D31">
+                                <span>
+                                    <img src="<%= data.qrCodeDataURL %>"
+                                    style="width: 70px; height: 70px;"
+                                    alt="QR Code">
+                                </span>
+                            </td>
+                        </tr>
                         <tr>
                             <td class="text-left">
-                                <span>MemberID: </span>&nbsp;&nbsp;<span><%= memberData.companyID %></span>
+                                <span>MemberID: </span>&nbsp;&nbsp;<span><%= data.userData.companyID %></span>
                             </td>
                             <td class="text-left">
-                                <span>Valid Until: </span>&nbsp;&nbsp;<span><%= currentDate.day %>-<%= currentDate.month %>-<%= currentDate.year %></span>
+                                <span>Valid Until: </span>&nbsp;&nbsp;<span><%= data.expiryDate %></span>
                             </td>
                         </tr>
                     </table>
                 </td>
-
                 <td width="30%" style="float: left; margin-top: 30%;">
                     <table>
-                        <!-- ... table rows ... -->
+                        <!-- ... -->
                         <tr>
                             <td>
-                                <img src="<%= BACKEND_URL + '/upload/tree.png' %>" width="400" height="400">
+                                <img src="<%= data.BACKEND_URL %>/gs1Images/tree.png" width="400" height="400">
                             </td>
                         </tr>
                     </table>
@@ -155,6 +204,7 @@
         </table>
     </center>
 </body>
+
 
 
 </html>
