--- a/Backend/views/pdf/certificate.ejs
+++ b/Backend/views/pdf/certificate.ejs
@@ -14,7 +14,8 @@
             font-family: 'Oswald', sans-serif;
             font-size: 14px;
             text-align: center;
-            width: 100%;
+            width: calc(100% - 20px);
+            padding: 10px 10px 20px 10px;
         }
 
         p {
