added email certifaicats

--- a/Backend/views/pdf/customInvoice.ejs
+++ b/Backend/views/pdf/customInvoice.ejs
@@ -13,6 +13,8 @@
                 font-family: DejaVu Sans, sans-serif;
                 padding: 4rem;
                 background-color: white;
+                font-size: 1rem;
+            
             }
     
             .table-suply {
@@ -184,7 +186,7 @@
                     </tr>
                 </table>
                 <hr style=" border: 10px solid #EF6231;"></hr>
-                <table class="" width="100%" cellspacing="0" cellpadding="0" style="border:none; font-size: 11px; line-height: 0.5 rem;">
+                <table class="" width="100%" cellspacing="0" cellpadding="0" style="border:none; font-size: 1rem; line-height: 0.5 rem;">
                     <tr>
                         <!-- Billing Information -->
                         <td width="50%">
@@ -212,14 +214,18 @@
                         <td width="50%">
                             <p class="p-text">
                                 <b>Type of Payment:</b> 
-                                <% if (data.cart.payment_type === 'bank_transfer') { %>
-                                    Bank
-                                <% } else { %>
-                                    Mada/Visa
-                                <% } %>
+                                <%= data.memberData.registeration %>
                             </p>
                             <p class="p-text">
                                 <b>Membership Type:</b> <%= data.memberData.gtin_subscription.products.member_category_description %>
+                            </p>
+                            <p class="p-text">
+                                <b>Payment Method</b> 
+                                <% if (data.cart.payment_type === 'bank_transfer') { %>
+                                    Bank Transfer
+                                <% } else { %>
+                                    Mada/Visa
+                                <% } %>
                             </p>
                         </td>
                     </tr>
@@ -231,7 +237,7 @@
 
               
               <!-- Invoice Items Table -->
-              <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 11px;">
+              <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 1rem;">
                 <tr class="p-text text-bold" style="background-color: #003D79; color: white;">
                     <th colspan="2">#</th>
                     <th colspan="4">Description</th>
@@ -266,9 +272,11 @@
                 </div>
 
                 <!-- Bank Details Table -->
-                <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 11px;">
+                <table class="table-suply table-sm" width="100%" cellspacing="0" cellpadding="0" style="font-size: 1rem;">
                     <tr class="p-text text-bold" style="background-color: #003D79;">
-                        <td colspan="12" align="center" class="p-text text-left">For bank transfer to our bank account</td>
+                        <td colspan="12" align="center" class="p-text text-left"
+                        style="color: white; font-weight: bold; font-size: 1rem;" 
+                        >For transfer to our bank account</td>
                     </tr>
                     <tr>
                         <td width="40%" colspan="4" class="text-left">Name</td>
@@ -300,51 +308,52 @@
             </div>
             
         </div>
+        <footer>
+            <table class="" width="100%" cellspacing="0" cellpadding="0"
+                style="border:none; font-size: 1rem; line-height: 0.5 rem;">
+                <tr>
+                    <td width="10%" class="text-left" style="border-right-style: 1px solid; border-color: #ED7D31">
+                        <img src="<%= data.memberData.qrCodeDataURL %>"
+                        style="width: 70px; height: 70px;"
+                        alt="QR Code">
+                    </td>
+                    <td width="90%" class="text-left" style="margin-left: 10px;">
+                        <table class="" width="100%" cellspacing="0" cellpadding="0"
+                            style="border:none; font-size: 1rem; line-height: 0.5 rem;">
+                            <tr>
+                                <td>
+                                    <i class="fas fa-phone" aria-hidden="true"></i>
+                                </td>
+                                <td style="padding-left: 10px;">
+                                    +<span>966</span>-<span>11</span>-<span>218</span>-<span>2423</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="fas fa-envelope" aria-hidden="true"></i>
+                                </td>
+                                <td style="padding-left: 10px;">
+                                    gs1sa@gs1.org.sa
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <i class="fas fa-map-marker" aria-hidden="true"></i>
+                                </td>
+                                <td style="padding-left: 10px;">
+                                    <span>
+                                        King Fahad Branch Road, Al-Moatamarat District
+                                        P.O.Box 16683 Riyadh 11474, Saudi Arabia
+                                    </span>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </footer>
     </center>
-    <footer>
-        <table class="" width="100%" cellspacing="0" cellpadding="0"
-            style="border:none; font-size: 11px; line-height: 0.5 rem;">
-            <tr>
-                <td width="10%" class="text-left" style="border-right-style: 1px solid; border-color: #ED7D31">
-                    <img src="<%= data.memberData.qrCodeDataURL %>"
-                    style="width: 70px; height: 70px;"
-                    alt="QR Code">
-                </td>
-                <td width="90%" class="text-left" style="margin-left: 10px;">
-                    <table class="" width="100%" cellspacing="0" cellpadding="0"
-                        style="border:none; font-size: 11px; line-height: 0.5 rem;">
-                        <tr>
-                            <td>
-                                <i class="fas fa-phone" aria-hidden="true"></i>
-                            </td>
-                            <td style="padding-left: 10px;">
-                                +<span>966</span>-<span>11</span>-<span>218</span>-<span>2423</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="fas fa-envelope" aria-hidden="true"></i>
-                            </td>
-                            <td style="padding-left: 10px;">
-                                gs1sa@gs1.org.sa
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <i class="fas fa-map-marker" aria-hidden="true"></i>
-                            </td>
-                            <td style="padding-left: 10px;">
-                                <span>
-                                    King Fahad Branch Road, Al-Moatamarat District
-                                    P.O.Box 16683 Riyadh 11474, Saudi Arabia
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </footer>
+   
     <!----------------------------->
 </body>
 
