--- a/Backend/views/pdf/customInvoice.ejs
+++ b/Backend/views/pdf/customInvoice.ejs
@@ -225,7 +225,7 @@
                                 <% if (data.cart.payment_type === 'bank_transfer') { %>
                                     Bank Transfer
                                 <% } else { %>
-                                    Mada/Visa
+                                    Bank Transfer
                                 <% } %>
                             </p>
                         </td>
