--- a/Backend/views/pdf/customInvoice.ejs
+++ b/Backend/views/pdf/customInvoice.ejs
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
         <style>
             body {
-                
+                position: relative;
                 font-family: DejaVu Sans, sans-serif;
                 padding: 4rem;
                 background-color: white;
                 font-size: 1rem;
-            
+         
             }
     
             .table-suply {
@@ -128,6 +128,8 @@
             }
     
             footer {
+                position: absolute;
+                bottom: 0;
                 margin-top: 3rem;   
                 height: 70px;
                 font-size: 12px !important;
@@ -309,53 +311,54 @@
             </div>
             
         </div>
-        <footer>
-            <table class="" width="100%" cellspacing="0" cellpadding="0"
-                style="border:none; font-size: 1rem; line-height: 0.5 rem;">
-                <tr>
-                    <td width="10%" class="text-left" style="border-right-style: 1px solid; border-color: #ED7D31">
-                        <img src="<%= data.memberData.qrCodeDataURL %>"
-                        style="width: 70px; height: 70px;"
-                        alt="QR Code">
-                    </td>
-                    <td width="90%" class="text-left" style="margin-left: 10px;">
-                        <table class="" width="100%" cellspacing="0" cellpadding="0"
-                            style="border:none; font-size: 1rem; line-height: 0.5 rem;">
-                            <tr>
-                                <td>
-                                    <i class="fas fa-phone" aria-hidden="true"></i>
-                                </td>
-                                <td style="padding-left: 10px;">
-                                    +<span>966</span>-<span>11</span>-<span>218</span>-<span>2423</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fas fa-envelope" aria-hidden="true"></i>
-                                </td>
-                                <td style="padding-left: 10px;">
-                                    gs1sa@gs1.org.sa
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <i class="fas fa-map-marker" aria-hidden="true"></i>
-                                </td>
-                                <td style="padding-left: 10px;">
-                                    <span>
-                                        King Fahad Branch Road, Al-Moatamarat District
-                                        P.O.Box 16683 Riyadh 11474, Saudi Arabia
-                                    </span>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
-            </table>
-        </footer>
+       
     </center>
    
     <!----------------------------->
+    <footer>
+        <table class="" width="100%" cellspacing="0" cellpadding="0"
+            style="border:none; font-size: 1rem; line-height: 0.5 rem;">
+            <tr>
+                <td width="10%" class="text-left" style="border-right-style: 1px solid; border-color: #ED7D31">
+                    <img src="<%= data.memberData.qrCodeDataURL %>"
+                    style="width: 70px; height: 70px;"
+                    alt="QR Code">
+                </td>
+                <td width="90%" class="text-left" style="margin-left: 10px;">
+                    <table class="" width="100%" cellspacing="0" cellpadding="0"
+                        style="border:none; font-size: 1rem; line-height: 0.5 rem;">
+                        <tr>
+                            <td>
+                                <i class="fas fa-phone" aria-hidden="true"></i>
+                            </td>
+                            <td style="padding-left: 10px;">
+                                +<span>966</span>-<span>11</span>-<span>218</span>-<span>2423</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="fas fa-envelope" aria-hidden="true"></i>
+                            </td>
+                            <td style="padding-left: 10px;">
+                                gs1sa@gs1.org.sa
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="fas fa-map-marker" aria-hidden="true"></i>
+                            </td>
+                            <td style="padding-left: 10px;">
+                                <span>
+                                    King Fahad Branch Road, Al-Moatamarat District
+                                    P.O.Box 16683 Riyadh 11474, Saudi Arabia
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </footer>
 </body>
 
 </html>
