--- a/Backend/views/pdf/certificate.ejs
+++ b/Backend/views/pdf/certificate.ejs
@@ -7,6 +7,9 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
    
     <style type='text/css'>
+          @page {
+        size: landscape;
+    }
         body {
             font-family: 'Roboto Condensed', sans-serif;
             color: black;
@@ -14,7 +17,9 @@
             font-family: 'Oswald', sans-serif;
             font-size: 14px;
             text-align: center;
-            width: calc(100% - 20px);
+            /* width: calc(100% - 20px); */
+            width: auto;
+            height: auto;
             padding: 10px 10px 20px 10px;
         }
 
