--- a/Frontend/src/Pages/MemberPages/SSCC/BulkSSCCPopup.css
+++ b/Frontend/src/Pages/MemberPages/SSCC/BulkSSCCPopup.css
@@ -1,4 +1,4 @@
-/* BulkSSCCPopup.css */
+/* BulkSSCCPopup.css
 
 .popup-container {
     position: fixed;
@@ -76,4 +76,4 @@
     background-color: #ccc;
     color: #fff;
   }
-  
+   */
