--- a/Frontend/src/Pages/MemberPages/DigitalUrlInfo/DigitalUrlInfo.css
+++ b/Frontend/src/Pages/MemberPages/DigitalUrlInfo/DigitalUrlInfo.css
@@ -36,10 +36,9 @@
   margin-bottom: 15px;
 }
 
-.digital-popup-title {
+/* .digital-popup-title {
   font-size: 18px;
-  font-weight: bold;
-}
+} */
 
 .digital-popup-close {
   background-color: transparent;
@@ -120,18 +119,8 @@ select {
   padding: 8px 16px;
   cursor: pointer;
 }
-.digital-popup-save {
-  background-color: blue;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
-  margin-left: 10px;
-  cursor: pointer;
-}
 
-.digital-popup-close:hover,
-.digital-popup-save:hover {
+.digital-popup-close:hover {
   background-color: darkblue;
 }
 
