--- a/Frontend/src/Pages/MemberPages/DigitalUrlInfo/DigitalUrlInfo.css
+++ b/Frontend/src/Pages/MemberPages/DigitalUrlInfo/DigitalUrlInfo.css
@@ -86,6 +86,19 @@
   margin-bottom: 10px;
 }
 
+.digital-form-label {
+  flex-basis: 30%;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.digital-form-input {
+  flex-grow: 1;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
 /* label {
   flex-basis: 30%;
   font-weight: 500;
